Question count added.
